Added a README file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Sass Practice</title>
+		<title>Bob's bakery</title>
 		<link rel="stylesheet" href="style.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 	</head>
